--- a/.github/workflows/train_model.yml
+++ b/.github/workflows/train_model.yml
@@ -32,3 +32,5 @@ jobs:
       uses: Azure/aml-run@v1
       with:
           azure_credentials: ${{ secrets.AZURE_CREDENTIALS }}
+          
+    # Done
