--- a/.github/workflows/deploy_model.yml
+++ b/.github/workflows/deploy_model.yml
@@ -1,8 +1,7 @@
 name: Model deployment
 
 on:
-  repository_dispatch:
-    types: [machinelearningservices-runcompleted]
+   push
 
 jobs:
   deploy:
